update_transformation_fn docs

--- a/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
+++ b/notebooks/featurestore/hsfs/online_transformations/online_transformations.ipynb
@@ -35,7 +35,7 @@
      "data": {
       "text/html": [
        "<table>\n",
-       "<tr><th>ID</th><th>YARN Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>9</td><td>application_1621853749763_0010</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1621853749763_0010/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_1621853749763_0010_01_000001/test__meb10000\">Link</a></td></tr></table>"
+       "<tr><th>ID</th><th>Application ID</th><th>Kind</th><th>State</th><th>Spark UI</th><th>Driver log</th></tr><tr><td>3</td><td>application_1650453136484_0004</td><td>pyspark</td><td>idle</td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8089/proxy/application_1650453136484_0004/\">Link</a></td><td><a target=\"_blank\" href=\"/hopsworks-api/yarnui/https://hopsworks0.logicalclocks.com:8044/node/containerlogs/container_e02_1650453136484_0004_01_000001/test_pr__meb10000\">Link</a></td></tr></table>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -73,7 +73,7 @@
     "Don't decorate the transformation function with Pyspark `@udf` or `@pandas_udf`, as well as don't use any Pyspark dependencies.\n",
     "HSFS will decorate transformation function only if it is used inside Pyspark application.\n",
     "    \n",
-    "To successfully execute this example please install `hsfs_transformers` library from https://github.com/davitbzh/hsfs-transformer-template\n"
+    "To successfully execute this example please install `transformation_fn_template` library from https://github.com/logicalclocks/transformation_fn_template\n"
    ]
   },
   {
@@ -82,8 +82,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from hsfs_transformers import transformers\n",
-    "plus_one_float_meta = fs.create_transformation_function(transformation_function=transformers.plus_one, \n",
+    "from custom_functions import transformations\n",
+    "plus_one_float_meta = fs.create_transformation_function(transformation_function=transformations.plus_one, \n",
     "                                                        output_type=float, \n",
     "                                                        version=1)\n",
     "plus_one_float_meta.save()"
@@ -95,7 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plus_one_int_meta = fs.create_transformation_function(transformation_function=transformers.plus_one, \n",
+    "plus_one_int_meta = fs.create_transformation_function(transformation_function=transformations.plus_one, \n",
     "                                                      output_type=int, \n",
     "                                                      version=2)\n",
     "plus_one_int_meta.save()"
@@ -107,7 +107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plus_one_double_meta = fs.create_transformation_function(transformation_function=transformers.plus_one, \n",
+    "plus_one_double_meta = fs.create_transformation_function(transformation_function=transformations.plus_one, \n",
     "                                                    output_type=\"double\", version=3)\n",
     "plus_one_double_meta.save()"
    ]
@@ -119,7 +119,7 @@
    "outputs": [],
    "source": [
     "date_string_2_timestamp_meta = fs.create_transformation_function(\n",
-    "                                            transformation_function=transformers.date_string_to_timestamp,\n",
+    "                                            transformation_function=transformations.date_string_to_timestamp,\n",
     "                                            output_type=\"long\", version=1)\n",
     "date_string_2_timestamp_meta.save()"
    ]
@@ -161,7 +161,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563a10>, <hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563110>, <hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563750>, <hsfs.transformation_function.TransformationFunction object at 0x7fa7d8563990>]"
+      "[<hsfs.transformation_function.TransformationFunction object at 0x7f98892abcd0>, <hsfs.transformation_function.TransformationFunction object at 0x7f9889291070>, <hsfs.transformation_function.TransformationFunction object at 0x7f98892abc40>, <hsfs.transformation_function.TransformationFunction object at 0x7f9889291550>, <hsfs.transformation_function.TransformationFunction object at 0x7f98892916a0>, <hsfs.transformation_function.TransformationFunction object at 0x7f98892918e0>, <hsfs.transformation_function.TransformationFunction object at 0x7f98892919a0>, <hsfs.transformation_function.TransformationFunction object at 0x7f98892abd60>]"
      ]
     }
    ],
@@ -274,10 +274,7 @@
      "output_type": "stream",
      "text": [
       "from datetime import datetime\n",
-      "from pyspark.sql.functions import udf\n",
-      "from pyspark.sql.types import *\n",
       "\n",
-      "@udf(FloatType())\n",
       "def plus_one(value):\n",
       "    return value + 1"
      ]
@@ -297,10 +294,7 @@
      "output_type": "stream",
      "text": [
       "from datetime import datetime\n",
-      "from pyspark.sql.functions import udf\n",
-      "from pyspark.sql.types import *\n",
       "\n",
-      "@udf(IntegerType())\n",
       "def plus_one(value):\n",
       "    return value + 1"
      ]
@@ -320,10 +314,7 @@
      "output_type": "stream",
      "text": [
       "from datetime import datetime\n",
-      "from pyspark.sql.functions import udf\n",
-      "from pyspark.sql.types import *\n",
       "\n",
-      "@udf(LongType())\n",
       "def date_string_to_timestamp(input_date):\n",
       "    date_format = \"%Y%m%d%H%M%S\"\n",
       "    return int(float(datetime.strptime(input_date, date_format).timestamp()) * 1000)"
@@ -356,7 +347,7 @@
    "metadata": {},
    "source": [
     "# Create training dataset with online transformation\n",
-    "### To use online transoformation function for training dataset it must be created from hsfs `Query` object."
+    "#### To use online transoformation function for training dataset it must be created from hsfs `Query` object. Following example assumes that you already craeted features groups using this notebook [time_travel_python.ipynb](../time_travel/time_travel_python.ipynb)"
    ]
   },
   {
@@ -585,21 +576,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "PySpark",
    "language": "python",
-   "name": "python3"
+   "name": "pysparkkernel"
   },
   "language_info": {
    "codemirror_mode": {
-    "name": "ipython",
+    "name": "python",
     "version": 3
    },
-   "file_extension": ".py",
    "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "name": "pyspark",
+   "pygments_lexer": "python3"
   }
  },
  "nbformat": 4,
