Update Base example for Maggy

--- a/notebooks/ml/Maggy/maggy-hello-world.ipynb
+++ b/notebooks/ml/Maggy/maggy-hello-world.ipynb
@@ -1,12 +1,64 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Maggy Base Example"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is the 'hello world' example for Maggy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First we import the <em>experiment</em> function from Maggy."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from maggy.experiment import experiment"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we define a training function, in this case we just return a dictionary with the results of our experiment."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "def training_function():\n",
+    "    # training code goes here\n",
+    "    # ...\n",
+    "    # return results as a dict \n",
+    "    return {'accuracy':1, 'f1': 0.5}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "then we launch the experiment"
    ]
   },
   {
@@ -17,29 +69,18 @@
      "name": "#%%\n"
     }
    },
-   "outputs": [],
-   "source": [
-    "def training_function():\n",
-    "    x = 0\n",
-    "    for i in range(100):\n",
-    "        x +=1\n",
-    "    return x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "You are running Maggy on Hopsworks.\n"
+      "Detected Kernel: Python.\n",
+      "Detected Environment: Hopsworks.\n",
+      "List of the results:\n",
+      "\n",
+      "accuracy  :  [1]\n",
+      "f1  :  [0.5]\n",
+      "Finished experiment. Total run time: 0 hours, 0 minutes, 0 seconds\n"
      ]
     }
    ],
@@ -49,16 +90,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "100"
+       "{'accuracy': 1, 'f1': 0.5}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -66,6 +107,13 @@
    "source": [
     "result"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
